--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,12 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 15vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #50B074;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
