--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,20 @@
     transform: rotate(360deg);
   }
 }
+
+.text-left {
+  text-align: left;
+}
+
+.tooltip .tooltip-inner {
+  background-color: #FFFFFF;
+  border: 1px solid #000000;
+  color: #000;
+  font-size: 19px;
+}
+
+body {
+  background-color: #0D2436;
+  color: #FFFFFF;
+  font-family: 'Roboto', sans-serif;
+}
