--- a/src/App.css
+++ b/src/App.css
@@ -8,14 +8,11 @@
 }
 
 .App-header {
-  background-color: #50B074;
-  min-height: 100vh;
+  width: 80vw;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
 }
 
 .App-link {
